--- a/repositories.html
+++ b/repositories.html
@@ -2401,9 +2401,9 @@ div.overlay.active {
                 alt="alt" width="70" height="60" />
         </h1>
         <div class="right">
-            <a href="/">Home</a>
-            <a href="/repositories.html">Repositories</a>
-            <a href="/about.html">About</a>
+            <a href="">Home</a>
+            <a href="repositories.html">Repositories</a>
+            <a href="about.html">About</a>
         </div>
     </header>
 
@@ -2455,7 +2455,7 @@ div.overlay.active {
                           </li>      
                           <li>
                             <div class="box">
-                              <a href="https://github.com/sriwebgalaxy">
+                              <a href="https://github.com/sriwebgalaxy/home">
                                 <div>
                                   <h4>For more</h4>
                                   <p>Click hear..</p>
@@ -2486,7 +2486,7 @@ div.overlay.active {
                 <div class="footer-links">
                     <h3>SriWebGalexy</h3>
                     <ul>
-                        <li><a href="/about.html">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
