--- a/about.html
+++ b/about.html
@@ -672,8 +672,8 @@ body {
         </h1>
         <div class="right">
             <a href="/">Home</a>
-            <a href="/repositories.html">Repositories</a>
-            <a href="/about.html">About</a>
+            <a href="repositories.html">Repositories</a>
+            <a href="about.html">About</a>
         </div>
     </header>
     <div class="about-section">
@@ -743,7 +743,7 @@ body {
                 <div class="footer-links">
                     <h3>SriWebGalexy</h3>
                     <ul>
-                        <li><a href="/about.html">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
