--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ footer {
                 alt="alt" width="70" height="60" />
         </h1>
         <div class="right">
-                <a href="/">Home</a>
-                <a href="/repositories.html">Repositories</a>
-                <a href="/about.html">About</a>
+                <a href="">Home</a>
+                <a href="repositories.html">Repositories</a>
+                <a href="about.html">About</a>
         </div>
     </header>
 
@@ -98,7 +98,7 @@ footer {
                 <div class="footer-links">
                     <h3>SriWebGalexy</h3>
                     <ul>
-                        <li><a href="/about.html">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
